--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,17 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android-extensions'
 }
+apply plugin: 'kotlin-android'
 
 android {
     signingConfigs {
+    release {
+        storeFile file('D:\\tusdk-work\\lasque\\android-ec-demo\\Signature\\publish.keystore')
+        storePassword '23wesdxc#'
+        keyAlias 'tusdk'
+        keyPassword '23wesdxc#'
+    }
     }
     compileSdkVersion 30
     buildToolsVersion "29.0.3"
@@ -13,7 +21,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.2"
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -22,6 +30,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -53,6 +62,11 @@ dependencies {
     api 'androidx.multidex:multidex:2.0.1'
 
     api 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation("org.jetbrains.anko:anko:$anko_version")
+
+    implementation "com.github.jakob-grabner:Circle-Progress-View:v1.3"
 
 
 }
