--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,22 +6,21 @@ apply plugin: 'kotlin-android'
 
 android {
     signingConfigs {
-//    release {
-//        storeFile file('D:\\tusdk-work\\lasque\\android-ec-demo\\Signature\\publish.keystore')
-//        storePassword '23wesdxc#'
-//        keyAlias 'tusdk'
-//        keyPassword '23wesdxc#'
-//    }
+    release {
+        storeFile file('D:\\tusdk-work\\lasque\\android-ec-demo\\Signature\\publish.keystore')
+        storePassword '23wesdxc#'
+        keyAlias 'tusdk'
+        keyPassword '23wesdxc#'
+    }
     }
     compileSdkVersion 30
-//    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "org.lasque.effectcamerademo"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.3"
+        versionCode 110
+        versionName "1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,7 +29,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
